# feistel-py

./: MANIFEST.in  README.md  publish.sh  pyproject.toml
feistel/: __main__.py  cipher.py  fpe.py
feistel/utils/: base256.py  bytearray.py  strings.py  xor.py
src/feistel/: __init__.py  __main__.py  cipher.py  custom.py  fpe.py
src/feistel/utils/: __init__.py  bytearray.py  hash.py  padding.py  xor.py
tests/: test_cipher.py  test_custom.py  test_fpe.py  test_utils.py
